cabal-version: 3.6

name: book

version: 0

data-files: **/*.txt

library
    default-language:   Haskell2010
    hs-source-dirs:     src
    default-extensions: BlockArguments QuasiQuotes
                        TypeApplications ScopedTypeVariables
    ghc-options:        -Wall -fdefer-typed-holes
    build-depends:      sockets-and-pipes ^>= 1.0
    exposed-modules:    Book